# eigenfrequencies

./: .gitignore  .gitmodules  HANDOFF.md  HANDOFF_2026-07-06.md  PROGRESS.md  de_opti_5824226.out  de_opti_5824583.out  de_opti_5824899.out  documentation.md  obsidian_dashboard_eigenfrequencies.md  obsidian_eigenfrequencies.md  overview.md  pyproject.toml
.github/workflows/: ci.yml
cluster/: apptainer_fenicsx.def  env_notes.md  run_de.sh  run_step_3.2.sh  start_servers.sh  submit.sh  submit_de.sh  submit_dev.sh
demo/beam/: beam_fem_validation.py  beam_spline_optimization.py  cantilever_test.py  config.py  euler_analytical.py  geometry.md  geometry.py  geometry_spline.py  main.py  optimization.py  solver.py  tui.py
docker/: fenicsx.Dockerfile
docs/: Makefile
docs/source/: conf.py  index.rst  plan.md  quickstart.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  eigenfrequencies-callflow.html  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: build_container.sh  run_container.sh
server_logs/uris/: worker_0.uri  worker_1.uri  worker_10.uri  worker_100.uri  worker_101.uri  worker_102.uri  worker_103.uri  worker_104.uri  (+120 more)
src/: __init__.py
turbine_runner/: .gitignore  README.md  VALIDATION.md  added_mass.py  cfd_eval.py  config.py  dtoo_cfd_build.py  dtoo_export.py  evaluate.py  main.py  mesh_prep.py  objective.py  optimization.py  optimize.py  optimize_de.py  optimize_multi.py  server_de.py  solver.py  stl_to_msh.py  test_free_mode.py  test_testcase_validation.py  validate_testcase.py
(+12 files in other folders)
